Fixes Netflify site name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     repo: 'luangb/simpla-test',
 
     // Netlify auth adapter, initialize with your Netlify site name
-    auth: new SimplaNetlify({ site: 'Simpla Test' }),
+    auth: new SimplaNetlify({ site: 'model-catherine-52773' }),
 
     // Public content source (optional)
     // Defaults to fetching directly from Github
