--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
 <link rel="import" href="bower_components/simpla-text/simpla-text.html">
 <link rel="import" href="bower_components/simpla-img/simpla-img.html">
-<link rel="import" href="bower_components/simpla-admin/simpla-admin.html" async>
 <link rel="import" href="/bower_components/simpla-collection/simpla-collection.html">
 <link rel="import" href="/bower_components/simpla-paths/simpla-paths.html">
+<link rel="import" href="bower_components/simpla-admin/simpla-admin.html">
 
 </head>
 
