--- a/index.html
+++ b/index.html
@@ -684,12 +684,12 @@
 								</a>
 							</figure>
 
-							<h4 class="tvpontanegra_title"><simpla-text sid="/[item]/title"></simpla-text></h4>
-							<p class="description"><simpla-text sid="/[item]/description"></simpla-text></p>
+							<h4 class="tvpontanegra_title"><simpla-text sid="[item]/title"></simpla-text></h4>
+							<p class="description"><simpla-text sid="[item]/description"></simpla-text></p>
 
 							<div class="tvpontanegra_info">
-								<simpla-text sid="/[item]/dias" plaintext></simpla-text>
-								<small class="hour"><simpla-text sid="/[item]/horario" plaintext></simpla-text></small>
+								<simpla-text sid="[item]/dias" plaintext></simpla-text>
+								<small class="hour"><simpla-text sid="[item]/horario" plaintext></simpla-text></small>
 							</div>
 						</li>
 					</template>
