--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 
 							<div class="tvpontanegra_info">
 								<simpla-text sid="[item]/dias" plaintext></simpla-text>
-								<small class="hour"><simpla-text sid="[item]/horario" plaintext></simpla-text></small>
+								<small class="hour"><simpla-text sid="[item]/horario" plaintext>testeteste</simpla-text></small>
 							</div>
 						</li>
 					</template>
